5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1758_1183.log
== TEST (2019-05-28 10:50:14) 
-- CODE:
from numpy import*
vetor = arrey(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2<nn):
	if(vetor[i2]>0):
		vector[i3]=vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:50:57) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2<nn):
	if(vetor[i2]>0):
		vector[i3]=vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:52:40) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2<nn):
	if(vetor[i2]>0):
		vector[i3]=vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:36) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2<nn):
	if(vetor[i2]>0):
		vector[i3]=vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:32) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2<size(vector)):
	if(vetor[i2]>0):
		vector[i3]=vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:13) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2=<size(vector)):
	if(vetor[i2]>0):
		vector[i3] = vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
File "XXXX", line 14
    while(i2=<size(vector)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:26) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2<=size(vector)):
	if(vetor[i2]>0):
		vector[i3] = vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:13) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i2<size(vector)):
	if(vetor[i2]>0):
		vector[i3] = vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:08:23) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i3<size(vector)):
	if(vetor[i2]>0):
		vector[i3] = vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:09:02) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i3<size(vector)):
	if(vetor[i2]>0):
		vector[i3] = vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:57) 
-- CODE:
from numpy import*
vetor = array(eval(input("escreva um vetor: ")))

i = 0
nn = 0
while(i<size(vetor)):
	if(vetor[i]>0):
		nn = nn + 1
	i = i + 1
vector = ones(nn, dtype=int)

i2 = 0
i3 = 0
while(i3<size(vector)):
	if(vetor[i2]>0):
		vector[i3] = vetor[i2]
		i3 = i3 + 1
	i2 = i2 + 1

print(vector)
-- EXECUTION TIME:
0.42766
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
